; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_filt_specprocess.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_filt_specprocess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32, i32, i32, i64, %struct.kevent_internal_s, i32, %struct.TYPE_4__* }
%struct.kevent_internal_s = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.filt_process_s = type { i32 }

@EV_EOF = common dso_local global i32 0, align 4
@EV_ONESHOT = common dso_local global i32 0, align 4
@NOTE_LOWAT = common dso_local global i32 0, align 4
@EV_CLEAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.filt_process_s*, %struct.kevent_internal_s*)* @filt_specprocess to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filt_specprocess(%struct.knote* %0, %struct.filt_process_s* %1, %struct.kevent_internal_s* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.knote*, align 8
  %6 = alloca %struct.filt_process_s*, align 8
  %7 = alloca %struct.kevent_internal_s*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.knote* %0, %struct.knote** %5, align 8
  store %struct.filt_process_s* %1, %struct.filt_process_s** %6, align 8
  store %struct.kevent_internal_s* %2, %struct.kevent_internal_s** %7, align 8
  %14 = call i32 (...) @current_thread()
  %15 = call i32 @get_bsdthread_info(i32 %14)
  store i32 %15, i32* %9, align 4
  %16 = call i32 (...) @vfs_context_current()
  store i32 %16, i32* %10, align 4
  %17 = load %struct.knote*, %struct.knote** %5, align 8
  %18 = getelementptr inbounds %struct.knote, %struct.knote* %17, i32 0, i32 7
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %8, align 8
  %24 = load i64, i64* %8, align 8
  %25 = load %struct.knote*, %struct.knote** %5, align 8
  %26 = getelementptr inbounds %struct.knote, %struct.knote* %25, i32 0, i32 6
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @vnode_getwithvid(i64 %24, i32 %27)
  store i32 %28, i32* %13, align 4
  %29 = load i32, i32* %13, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %44

31:                                               ; preds = %3
  %32 = load i32, i32* @EV_EOF, align 4
  %33 = load i32, i32* @EV_ONESHOT, align 4
  %34 = or i32 %32, %33
  %35 = load %struct.knote*, %struct.knote** %5, align 8
  %36 = getelementptr inbounds %struct.knote, %struct.knote* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = or i32 %37, %34
  store i32 %38, i32* %36, align 8
  %39 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %7, align 8
  %40 = load %struct.knote*, %struct.knote** %5, align 8
  %41 = getelementptr inbounds %struct.knote, %struct.knote* %40, i32 0, i32 5
  %42 = bitcast %struct.kevent_internal_s* %39 to i8*
  %43 = bitcast %struct.kevent_internal_s* %41 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %42, i8* align 8 %43, i64 4, i1 false)
  store i32 1, i32* %4, align 4
  br label %95

44:                                               ; preds = %3
  %45 = load %struct.knote*, %struct.knote** %5, align 8
  %46 = call i32 @spec_knote_select_and_link(%struct.knote* %45)
  store i32 %46, i32* %12, align 4
  %47 = load %struct.knote*, %struct.knote** %5, align 8
  %48 = load i32, i32* %12, align 4
  %49 = call i32 @filt_spec_common(%struct.knote* %47, i32 %48)
  %50 = load i64, i64* %8, align 8
  %51 = call i32 @vnode_put(i64 %50)
  %52 = load %struct.knote*, %struct.knote** %5, align 8
  %53 = getelementptr inbounds %struct.knote, %struct.knote* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = load i32, i32* @NOTE_LOWAT, align 4
  %56 = and i32 %54, %55
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %67

58:                                               ; preds = %44
  %59 = load %struct.knote*, %struct.knote** %5, align 8
  %60 = getelementptr inbounds %struct.knote, %struct.knote* %59, i32 0, i32 2
  %61 = load i32, i32* %60, align 8
  %62 = load %struct.knote*, %struct.knote** %5, align 8
  %63 = getelementptr inbounds %struct.knote, %struct.knote* %62, i32 0, i32 3
  %64 = load i32, i32* %63, align 4
  %65 = icmp sge i32 %61, %64
  %66 = zext i1 %65 to i32
  br label %71

67:                                               ; preds = %44
  %68 = load %struct.knote*, %struct.knote** %5, align 8
  %69 = getelementptr inbounds %struct.knote, %struct.knote* %68, i32 0, i32 2
  %70 = load i32, i32* %69, align 8
  br label %71

71:                                               ; preds = %67, %58
  %72 = phi i32 [ %66, %58 ], [ %70, %67 ]
  store i32 %72, i32* %11, align 4
  %73 = load i32, i32* %11, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %75, label %93

75:                                               ; preds = %71
  %76 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %7, align 8
  %77 = load %struct.knote*, %struct.knote** %5, align 8
  %78 = getelementptr inbounds %struct.knote, %struct.knote* %77, i32 0, i32 5
  %79 = bitcast %struct.kevent_internal_s* %76 to i8*
  %80 = bitcast %struct.kevent_internal_s* %78 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %79, i8* align 8 %80, i64 4, i1 false)
  %81 = load %struct.knote*, %struct.knote** %5, align 8
  %82 = getelementptr inbounds %struct.knote, %struct.knote* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 8
  %84 = load i32, i32* @EV_CLEAR, align 4
  %85 = and i32 %83, %84
  %86 = icmp ne i32 %85, 0
  br i1 %86, label %87, label %92

87:                                               ; preds = %75
  %88 = load %struct.knote*, %struct.knote** %5, align 8
  %89 = getelementptr inbounds %struct.knote, %struct.knote* %88, i32 0, i32 4
  store i64 0, i64* %89, align 8
  %90 = load %struct.knote*, %struct.knote** %5, align 8
  %91 = getelementptr inbounds %struct.knote, %struct.knote* %90, i32 0, i32 2
  store i32 0, i32* %91, align 8
  br label %92

92:                                               ; preds = %87, %75
  br label %93

93:                                               ; preds = %92, %71
  %94 = load i32, i32* %11, align 4
  store i32 %94, i32* %4, align 4
  br label %95

95:                                               ; preds = %93, %31
  %96 = load i32, i32* %4, align 4
  ret i32 %96
}

declare dso_local i32 @get_bsdthread_info(i32) #1

declare dso_local i32 @current_thread(...) #1

declare dso_local i32 @vfs_context_current(...) #1

declare dso_local i32 @vnode_getwithvid(i64, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @spec_knote_select_and_link(%struct.knote*) #1

declare dso_local i32 @filt_spec_common(%struct.knote*, i32) #1

declare dso_local i32 @vnode_put(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
